adjust html and body settings ensure using dvh and dvw and change the overflow to hidden

--- a/src/main/vue/src/assets/css/base/reset.css
+++ b/src/main/vue/src/assets/css/base/reset.css
@@ -1,18 +1,10 @@
-html {
+html, body {
   margin: 0;
   padding: 0;
   overscroll-behavior: auto;
-  overflow: auto;
-  height: 100%;
-  background-color: #1a1f2e;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  overscroll-behavior: auto;
-  overflow: auto;
-  min-height: 100%;
+  overflow: hidden;
+  height: 100dvh;
+  width: 100dvw;
   user-select: none;
   background-color: #1a1f2e;
 }
